# transobserver

./: LICENSE  NOTES_UI_GITHUB.md  QUICKSTART.txt  README.fr.md  README.md  README.txt  pyproject.toml  repos.txt  targets.yml
.github/workflows/: dispatch_all_modules.yml  smoke-mock.yml  test-data-matrix.yml
config/: engines.yaml
engines/: README.md  mock_phio.py  mock_sost.py  mock_systemd.py
engines/phio/: .gitignore  README.md  README.txt  (+18 more)
schema/: cycles.sql
scripts/: dispatch_all.py
test_data/: FAO_AS_4471.csv  GDPDeflator.csv  ITU_DH_ACT_MOB_PER_100.csv  ITU_DH_INT_USR_DAY (1).csv  ITU_DH_POP_COV_4G (1).csv  PCH_IXP_NUM.csv  PCH_IXP_PARTICIPANTS.csv  PEERING_DB_CONN_DATA_CENT.csv  Population.csv  RealGDPShares.csv  RealPerCapitaGDP.csv  WB_CSC_EN_ATM_GHGT_GT_CE.csv  WB_ESG_EN_ATM_NOXE_PC (1).csv  WB_HCP_MORT1524.csv  WB_WDI_EN_GHG_CO2_LU_MT_CE_AR5.csv  WB_WDI_EN_POP_SLUM_UR_ZS.csv  band_ixp_crosssection_nochange.csv  band_population_belgium_loggrowth_shift.csv  confusion_matrix_counts (1).csv  confusion_matrix_counts (2).csv  confusion_matrix_row_norm (1).csv  confusion_matrix_row_norm (2).csv  gdp_1860soc_countrylevel_annual_1661-1860.csv  gdp_2005soc_countrylevel_annual_2006-2099.csv  gdp_2005soc_countrylevel_annual_2100-2299.csv  merged_results.csv  metrics.json  power_map_kS1_kS3.csv  signal_rates (1).csv  signal_rates_by_true_mode.csv
tools/: build_unified_manifest.py  collector.py  engine_detect.py  phio_run.py  run_parallel.sh  run_parallel_real.sh  smoke_one.py  sost_run.py  systemd_make_manifest.py  systemd_run.py
transobserver/: hashing.py
(+196 files in other folders)
