[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "transobserver"
version = "0.1.0"
description = "Parallel cycle harness for PhiO + Systemd-runner + SOST"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["transobserver"]
